<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_camera</name>
  <version>0.0.0</version>
  <description>Camera interface for Unitree Go1</description>
  <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>UnitreeCameraSDK</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>Boost</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>unitree_camera_launch_module</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
